--- a/twitter_front/instagram_cloneCoding/app/src/main/res/layout/fragment_profile.xml
+++ b/twitter_front/instagram_cloneCoding/app/src/main/res/layout/fragment_profile.xml
@@ -30,23 +30,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <Button
-                    android:id="@+id/account"
-                    style="?android:attr/borderlessButtonStyle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:backgroundTint="#FFFFFF"
-                    android:drawableEnd="@drawable/ic_arrow_bottom"
-                    android:shadowColor="#FEFEFE"
-                    android:text="UMC_4th_android_A"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                    android:textColor="@color/black"
-                    android:textSize="22dp"
-                    app:iconTint="#000000"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
@@ -100,101 +83,18 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/ic_profile_default" />
 
-            <LinearLayout
-                android:id="@+id/linearLayout2"
-                android:layout_width="38dp"
-
-                android:layout_height="wrap_content"
-                android:layout_marginStart="50dp"
-                android:layout_marginEnd="220dp"
-                android:gravity="center"
-                android:orientation="vertical"
+            <Button
+                android:id="@+id/editProfile"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_marginEnd="20dp"
+                android:backgroundTint="#DDDDDD"
+                android:text="프로필 수정"
+                android:textColor="@color/black"
+                android:textSize="13dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/imageView"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="0"
-                    android:textColor="#000000"
-                    android:textSize="21dp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="게시물"
-                    android:textColor="#000000"
-                    android:textSize="10dp" />
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/linearLayout"
-                android:layout_width="38dp"
-
-                android:layout_height="wrap_content"
-                android:layout_marginStart="25dp"
-                android:layout_marginEnd="25dp"
-                android:gravity="center"
-                android:orientation="vertical"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
-                app:layout_constraintStart_toEndOf="@+id/linearLayout2"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.501">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="0"
-                    android:textColor="#000000"
-                    android:textSize="21dp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="팔로워"
-                    android:textColor="#000000"
-                    android:textSize="10dp" />
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/linearLayout3"
-                android:layout_width="38dp"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="vertical"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.793"
-                app:layout_constraintStart_toStartOf="@+id/linearLayout2"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.488">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="0"
-                    android:textColor="#000000"
-                    android:textSize="21dp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="팔로잉"
-                    android:textColor="#000000"
-                    android:textSize="10dp" />
-
-
-            </LinearLayout>
+                app:layout_constraintTop_toTopOf="parent" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -208,7 +108,22 @@
             android:layout_marginTop="3dp"
             android:text="심세원"
             android:textColor="@color/black"
-            android:textSize="13dp" />
+            android:textSize="18dp"
+            android:textStyle="bold"/>
+
+        <Button
+            android:id="@+id/account"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#FFFFFF"
+            android:drawableEnd="@drawable/ic_arrow_bottom"
+            android:shadowColor="#FEFEFE"
+            android:text="UMC_4th_android_A"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+            android:textColor="@color/black"
+            android:textSize="15dp"
+            app:iconTint="#000000" />
 
         <TextView
             android:id="@+id/introduce"
@@ -224,67 +139,18 @@
         <!--프로필 편집 버튼-->
 
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-
-            <Button
-                android:id="@+id/editProfile"
-                android:layout_width="280dp"
-                android:layout_height="40dp"
-                android:backgroundTint="#DDDDDD"
-                android:text="프로필 편집"
-                android:textColor="@color/black"
-                android:textSize="13dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/search_friend"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageButton
-                android:id="@+id/search_friend"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:adjustViewBounds="true"
-                android:backgroundTint="#DDDDDD"
-                android:maxWidth="40dp"
-                android:maxHeight="40dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ic_recommend_friend"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/editProfile"
-                app:layout_constraintTop_toTopOf="parent" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-
         <!--스토리-->
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
-            android:layout_marginTop="6dp"
             android:layout_marginLeft="20dp"
-            android:text="스토리 하이라트"
+            android:layout_marginTop="20dp"
+            android:text="게시물"
             android:textColor="@color/black"
-            android:textSize="11dp"
-            android:textStyle="bold" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left"
-            android:layout_marginLeft="20dp"
-            android:text="좋아하는 스토리를 프로필에 보관하세요"
-            android:textColor="@color/black"
-            android:textSize="10dp"
+            android:textStyle="bold"
+            android:textSize="12dp"
             android:layout_marginBottom="6dp"/>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/highlight_recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="91dp" />
 
 
         <LinearLayout
@@ -292,24 +158,10 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:gravity="center"
-            android:orientation="horizontal">
+            android:orientation="horizontal"/>
 
-            <!--탭 바-->
-            <com.google.android.material.tabs.TabLayout
-                android:id="@+id/profileTab"
-                android:layout_width="match_parent"
-                android:layout_height="45dp"
-                app:tabGravity="fill"
-
-                app:tabIconTint="@color/black"
-                app:tabIndicatorColor="@color/black"
-                app:tabMode="fixed" />
-
-
-        </LinearLayout>
-
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/view_pager"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/post_recy"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
