:recycle: Refactor : 디자인 수정

--- a/twitter_front/instagram_cloneCoding/app/src/main/res/layout/fragment_profile.xml
+++ b/twitter_front/instagram_cloneCoding/app/src/main/res/layout/fragment_profile.xml
@@ -30,23 +30,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <Button
-                    android:id="@+id/account"
-                    style="?android:attr/borderlessButtonStyle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:backgroundTint="#FFFFFF"
-                    android:drawableEnd="@drawable/ic_arrow_bottom"
-                    android:shadowColor="#FEFEFE"
-                    android:text="UMC_4th_android_A"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                    android:textColor="@color/black"
-                    android:textSize="22dp"
-                    app:iconTint="#000000"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
@@ -112,25 +95,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/imageView"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="0"
-                    android:textColor="#000000"
-                    android:textSize="21dp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="게시물"
-                    android:textColor="#000000"
-                    android:textSize="10dp" />
-
-
-            </LinearLayout>
+                app:layout_constraintTop_toTopOf="parent"/>
 
             <LinearLayout
                 android:id="@+id/linearLayout"
@@ -146,21 +111,6 @@
                 app:layout_constraintStart_toEndOf="@+id/linearLayout2"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.501">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="0"
-                    android:textColor="#000000"
-                    android:textSize="21dp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="팔로워"
-                    android:textColor="#000000"
-                    android:textSize="10dp" />
 
 
             </LinearLayout>
@@ -178,26 +128,38 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.488">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="0"
-                    android:textColor="#000000"
-                    android:textSize="21dp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="팔로잉"
-                    android:textColor="#000000"
-                    android:textSize="10dp" />
-
 
             </LinearLayout>
 
+            <Button
+                android:id="@+id/editProfile"
+                android:layout_width="180dp"
+                android:layout_height="40dp"
+                android:layout_marginEnd="20dp"
+                android:backgroundTint="#DDDDDD"
+                android:text="프로필 편집"
+                android:textColor="@color/black"
+                android:textSize="13dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <Button
+            android:id="@+id/account"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#FFFFFF"
+            android:drawableEnd="@drawable/ic_arrow_bottom"
+            android:shadowColor="#FEFEFE"
+            android:text="\@GCU"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+            android:textColor="@color/black"
+            android:textSize="22dp"
+            app:iconTint="#000000" />
 
         <TextView
             android:id="@+id/name"
@@ -217,11 +179,14 @@
             android:layout_gravity="left"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="3dp"
-            android:text="가천대학교 UMC 4기 안드로이드"
+            android:text="가천대학교"
             android:textColor="@color/black"
             android:textSize="13dp" />
 
         <!--프로필 편집 버튼-->
+
+
+        <!--스토리-->
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -229,63 +194,55 @@
             android:layout_height="wrap_content">
 
 
-            <Button
-                android:id="@+id/editProfile"
-                android:layout_width="280dp"
-                android:layout_height="40dp"
-                android:backgroundTint="#DDDDDD"
-                android:text="프로필 편집"
-                android:textColor="@color/black"
-                android:textSize="13dp"
+            <TextView
+                android:id="@+id/textView11"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:text="0"
+                android:textColor="#000000"
+                android:textSize="21dp"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/search_friend"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageButton
-                android:id="@+id/search_friend"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:adjustViewBounds="true"
-                android:backgroundTint="#DDDDDD"
-                android:maxWidth="40dp"
-                android:maxHeight="40dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ic_recommend_friend"
+            <TextView
+                android:id="@+id/textView17"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:text="팔로워"
+                android:textColor="#000000"
+                android:textSize="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/editProfile"
+                app:layout_constraintStart_toEndOf="@+id/textView11"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/textView18"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="25dp"
+                android:text="0"
+                android:textColor="#000000"
+                android:textSize="21dp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/textView17"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="팔로잉"
+                android:textColor="#000000"
+                android:textSize="10dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/textView18"
                 app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-        <!--스토리-->
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left"
-            android:layout_marginTop="6dp"
-            android:layout_marginLeft="20dp"
-            android:text="스토리 하이라트"
-            android:textColor="@color/black"
-            android:textSize="11dp"
-            android:textStyle="bold" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left"
-            android:layout_marginLeft="20dp"
-            android:text="좋아하는 스토리를 프로필에 보관하세요"
-            android:textColor="@color/black"
-            android:textSize="10dp"
-            android:layout_marginBottom="6dp"/>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/highlight_recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="91dp" />
-
 
         <LinearLayout
             android:layout_width="match_parent"
