--- a/twitter_front/instagram_cloneCoding/app/src/main/res/layout/activity_login.xml
+++ b/twitter_front/instagram_cloneCoding/app/src/main/res/layout/activity_login.xml
@@ -46,12 +46,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout9">
 
-        <ImageView
+        <TextView
             android:id="@+id/imageView3"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginVertical="36dp"
-            app:srcCompat="@drawable/ic_instagram_text_logo" />
+            android:text="Twitter"
+            android:textSize="40dp"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:gravity="center"/>
 
         <EditText
             android:id="@+id/ID"
@@ -165,15 +169,6 @@
                 android:text="____________________" />
 
             <TextView
-                android:id="@+id/textView13"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:layout_weight="1"
-                android:text="  또는  "
-                android:textColor="#000000" />
-
-            <TextView
                 android:id="@+id/textView14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -185,25 +180,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="30dp"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/imageView4"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/ic_facebook" />
-
-            <TextView
-                android:id="@+id/textView15"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="6dp"
-                android:layout_weight="1"
-                android:text="Facebook으로 로그인"
-                android:textColor="#1877F1"
-                android:textStyle="bold" />
-        </LinearLayout>
+            android:orientation="horizontal"/>
 
     </LinearLayout>
 
