--- a/twitter_front/instagram_cloneCoding/app/src/main/res/layout/fragment_home.xml
+++ b/twitter_front/instagram_cloneCoding/app/src/main/res/layout/fragment_home.xml
@@ -34,15 +34,18 @@
                 android:layout_marginLeft="20dp"
                 android:orientation="horizontal">
 
-                <ImageButton
+                <TextView
                     android:id="@+id/account"
-                    style="?android:attr/borderlessButtonStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@android:color/transparent"
                     android:backgroundTint="#FFFFFF"
                     android:shadowColor="#FEFEFE"
-                    android:src="@drawable/ic_instagram_text_logo" />
+                    android:textColor="@color/black"
+                    android:text="Twitter"
+                    android:textStyle="italic|bold"
+                    android:textSize="30dp"/>
+
 
                 <ImageButton
                     style="?android:attr/borderlessButtonStyle"
@@ -119,13 +122,7 @@
                     android:layout_height="wrap_content"
                     app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/story_recyclerView"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:clickable="true"
-                        android:focusable="true"
-                        android:layout_below="@id/bar" />  <!--항상 상단 바의 밑에-->
+                    <!--항상 상단 바의 밑에-->
 
                 </com.google.android.material.appbar.CollapsingToolbarLayout>
             </com.google.android.material.appbar.AppBarLayout>
@@ -138,6 +135,7 @@
                 app:layout_anchor="@id/home_recycle_bar"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior"
                 app:layout_anchorGravity="bottom"
+                tools:listitem="@layout/post_item"
                 android:background="#DAD8D8"
                 android:outlineAmbientShadowColor="#FFFFFF"
                 android:outlineSpotShadowColor="#FFFFFF" />
