--- a/twitter_front/instagram_cloneCoding/app/src/main/res/layout/post_item.xml
+++ b/twitter_front/instagram_cloneCoding/app/src/main/res/layout/post_item.xml
@@ -12,7 +12,7 @@
         android:id="@+id/postItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#DAD8D8"
+        android:background="#FFFFFF"
         android:gravity="center_horizontal"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -65,7 +65,7 @@
             android:textSize="16dp"
             android:textColor="@color/black"
             android:textStyle="bold"
-            android:text="TextView" />
+            android:text="게시글 내용" />
 
         <ImageView
             android:layout_width="wrap_content"
@@ -86,31 +86,32 @@
             android:background="@color/white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:padding="5dp"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
             <ImageButton
 
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_margin="15dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="50dp"
                 android:background="@android:color/transparent"
                 android:padding="3dp"
                 android:src="@drawable/ic_heart" />
 
             <ImageButton
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_marginRight="15dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="50dp"
                 android:background="@android:color/transparent"
                 android:padding="3dp"
                 android:src="@drawable/ic_comment" />
 
             <ImageButton
 
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_marginRight="15dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="50dp"
                 android:background="@android:color/transparent"
                 android:padding="3dp"
                 android:src="@drawable/ic_share" />
@@ -119,7 +120,7 @@
 
                 android:layout_width="20dp"
                 android:layout_height="20dp"
-                android:layout_marginStart="230dp"
+                android:layout_marginStart="50dp"
                 android:background="@android:color/transparent"
                 android:padding="3dp"
                 android:src="@drawable/ic_bookmark" />
